// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Molecules | Tabs Controlled behaviour 1`] = `
<span
  className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 hhBrGJ"
>
  <button
    onClick={[Function]}
    type="button"
  >
    Change state outside
  </button>
  <ul
    className="Tabs__StyledUl-bqti0u-1 fvoSDF Flexbox__StyledFlexbox-sc-1ob4g1e-0 ldKkQD"
    direction="row"
    role="tablist"
  >
    <li
      className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 ikbdiw"
      role="presentation"
    >
      <span
        className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 jhNVIy"
      >
        <button
          aria-selected={true}
          className="NormalizedButton__Button-ey7f5x-0 Tabs__StyledButton-bqti0u-0 bBpoDR"
          id="tabs-tab-0"
          onClick={[Function]}
          onKeyDown={[Function]}
          role="tab"
          tabIndex={0}
          type="button"
        >
          <span
            className="TabTitle__StyledTitle-sc-1sa0gl6-0 dgGiju"
            height={8}
          >
            One
          </span>
        </button>
      </span>
    </li>
    <li
      className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 ikbdiw"
      role="presentation"
    >
      <span
        className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 hhBrGJ"
      >
        <button
          aria-selected={false}
          className="NormalizedButton__Button-ey7f5x-0 Tabs__StyledButton-bqti0u-0 bBpoDR"
          id="tabs-tab-1"
          onClick={[Function]}
          onKeyDown={[Function]}
          role="tab"
          tabIndex={-1}
          type="button"
        >
          <span
            className="TabTitle__StyledTitle-sc-1sa0gl6-0 fAyBAw"
            height={8}
          >
            Two
          </span>
        </button>
      </span>
    </li>
  </ul>
  <div
    className="Separator__StyledSeparator-a5vdsz-0 kXyqdV"
  />
  <section
    aria-labelledby="tabs-tab-0"
    className="Tabs__Content-bqti0u-2 hYgPOB"
    hidden={false}
    id="tabs-tabpanel-0"
    role="tabpanel"
  >
    Ones children
  </section>
</span>
`;

exports[`Storyshots Molecules | Tabs Default 1`] = `
<span
  className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 hhBrGJ"
>
  <ul
    className="Tabs__StyledUl-bqti0u-1 fvoSDF Flexbox__StyledFlexbox-sc-1ob4g1e-0 ldKkQD"
    direction="row"
    role="tablist"
  >
    <li
      className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 ikbdiw"
      role="presentation"
    >
      <span
        className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 jhNVIy"
      >
        <button
          aria-selected={true}
          className="NormalizedButton__Button-ey7f5x-0 Tabs__StyledButton-bqti0u-0 bBpoDR"
          id="tabs-tab-0"
          onClick={[Function]}
          onKeyDown={[Function]}
          role="tab"
          tabIndex={0}
          type="button"
        >
          <span
            className="TabTitle__StyledTitle-sc-1sa0gl6-0 dgGiju"
            height={8}
          >
            One
          </span>
        </button>
      </span>
    </li>
    <li
      className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 ikbdiw"
      role="presentation"
    >
      <span
        className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 hhBrGJ"
      >
        <button
          aria-selected={false}
          className="NormalizedButton__Button-ey7f5x-0 Tabs__StyledButton-bqti0u-0 bBpoDR"
          id="tabs-tab-1"
          onClick={[Function]}
          onKeyDown={[Function]}
          role="tab"
          tabIndex={-1}
          type="button"
        >
          <span
            className="TabTitle__StyledTitle-sc-1sa0gl6-0 fAyBAw"
            height={8}
          >
            <div>
              Node as well
              <span
                aria-label="goodjob"
                role="img"
              >
                👍
              </span>
            </div>
          </span>
        </button>
      </span>
    </li>
  </ul>
  <div
    className="Separator__StyledSeparator-a5vdsz-0 kXyqdV"
  />
  <section
    aria-labelledby="tabs-tab-0"
    className="Tabs__Content-bqti0u-2 hYgPOB"
    hidden={false}
    id="tabs-tabpanel-0"
    role="tabpanel"
  >
    Ones children
  </section>
</span>
`;

exports[`Storyshots Molecules | Tabs With conditionally hidden tab 1`] = `
<span
  className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 hhBrGJ"
>
  <ul
    className="Tabs__StyledUl-bqti0u-1 fvoSDF Flexbox__StyledFlexbox-sc-1ob4g1e-0 ldKkQD Tabsstories__StyledTabs-sc-1496d70-1 kToKQN"
    direction="row"
    role="tablist"
  >
    <li
      className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 ikbdiw"
      role="presentation"
    >
      <span
        className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 hhBrGJ"
      >
        <button
          aria-selected={false}
          className="NormalizedButton__Button-ey7f5x-0 Tabs__StyledButton-bqti0u-0 bBpoDR"
          id="tabs-tab-1"
          onClick={[Function]}
          onKeyDown={[Function]}
          role="tab"
          tabIndex={-1}
          type="button"
        >
          <span
            className="TabTitle__StyledTitle-sc-1sa0gl6-0 fAyBAw"
            height={8}
          >
            two
          </span>
        </button>
      </span>
    </li>
  </ul>
  <div
    className="Separator__StyledSeparator-a5vdsz-0 kXyqdV"
  />
</span>
`;

exports[`Storyshots Molecules | Tabs With custom styling (like spacing) 1`] = `
<span
  className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 hhBrGJ"
>
  <ul
    className="Tabs__StyledUl-bqti0u-1 fvoSDF Flexbox__StyledFlexbox-sc-1ob4g1e-0 ldKkQD Tabsstories__StyledTabs-sc-1496d70-1 kToKQN"
    direction="row"
    role="tablist"
  >
    <li
      className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 ikbdiw"
      role="presentation"
    >
      <span
        className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 jhNVIy"
      >
        <button
          aria-selected={true}
          className="NormalizedButton__Button-ey7f5x-0 Tabs__StyledButton-bqti0u-0 bBpoDR"
          id="tabs-tab-0"
          onClick={[Function]}
          onKeyDown={[Function]}
          role="tab"
          tabIndex={0}
          type="button"
        >
          <span
            className="TabTitle__StyledTitle-sc-1sa0gl6-0 dgGiju"
            height={8}
          >
            One
          </span>
        </button>
      </span>
    </li>
    <li
      className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 ikbdiw"
      role="presentation"
    >
      <span
        className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 hhBrGJ"
      >
        <button
          aria-selected={false}
          className="NormalizedButton__Button-ey7f5x-0 Tabs__StyledButton-bqti0u-0 bBpoDR"
          id="tabs-tab-1"
          onClick={[Function]}
          onKeyDown={[Function]}
          role="tab"
          tabIndex={-1}
          type="button"
        >
          <span
            className="TabTitle__StyledTitle-sc-1sa0gl6-0 fAyBAw"
            height={8}
          >
            two
          </span>
        </button>
      </span>
    </li>
  </ul>
  <div
    className="Separator__StyledSeparator-a5vdsz-0 kXyqdV"
  />
  <section
    aria-labelledby="tabs-tab-0"
    className="Tabs__Content-bqti0u-2 hYgPOB"
    hidden={false}
    id="tabs-tabpanel-0"
    role="tabpanel"
  >
    <div
      className="Tabsstories__SpacingInside-sc-1496d70-0 iBzAlm"
    >
      Ones children
    </div>
  </section>
</span>
`;

exports[`Storyshots Molecules | Tabs With height modified 1`] = `
<span
  className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 hhBrGJ"
>
  <ul
    className="Tabs__StyledUl-bqti0u-1 fvoSDF Flexbox__StyledFlexbox-sc-1ob4g1e-0 ldKkQD"
    direction="row"
    role="tablist"
  >
    <li
      className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 ikbdiw"
      role="presentation"
    >
      <span
        className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 jhNVIy"
      >
        <button
          aria-selected={true}
          className="NormalizedButton__Button-ey7f5x-0 Tabs__StyledButton-bqti0u-0 bBpoDR"
          id="tabs-tab-0"
          onClick={[Function]}
          onKeyDown={[Function]}
          role="tab"
          tabIndex={0}
          type="button"
        >
          <span
            className="TabTitle__StyledTitle-sc-1sa0gl6-0 jOgXPf"
            height={11}
          >
            One
          </span>
        </button>
      </span>
    </li>
    <li
      className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 ikbdiw"
      role="presentation"
    >
      <span
        className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 hhBrGJ"
      >
        <button
          aria-selected={false}
          className="NormalizedButton__Button-ey7f5x-0 Tabs__StyledButton-bqti0u-0 bBpoDR"
          id="tabs-tab-1"
          onClick={[Function]}
          onKeyDown={[Function]}
          role="tab"
          tabIndex={-1}
          type="button"
        >
          <span
            className="TabTitle__StyledTitle-sc-1sa0gl6-0 hVZBrR"
            height={11}
          >
            two
          </span>
        </button>
      </span>
    </li>
  </ul>
  <div
    className="Separator__StyledSeparator-a5vdsz-0 kXyqdV"
  />
  <section
    aria-labelledby="tabs-tab-0"
    className="Tabs__Content-bqti0u-2 hYgPOB"
    hidden={false}
    id="tabs-tabpanel-0"
    role="tabpanel"
  >
    Ones children
  </section>
</span>
`;
